--- a/pom.xml
+++ b/pom.xml
@@ -46,6 +46,12 @@
                     <target>17</target>
                 </configuration>
             </plugin>
+                 <repositories>
+    <repository>
+        <id>apache-repo</id>
+        <url>https://repo.maven.apache.org/maven2</url>
+    </repository>
+</repositories>
 
             <!-- Maven WAR Plugin -->
             <plugin>
